--- a/TMS/TMS/Content/custom-css/tms.css
+++ b/TMS/TMS/Content/custom-css/tms.css
@@ -18,10 +18,29 @@
     color: #ffffff;
 }
 
+.modal {
+    text-align: center;
+}
+
+
+@media screen and (min-width: 768px) { 
+  .modal:before {
+    display: inline-block;
+    vertical-align: middle;
+    content: " ";
+    height: 100%;
+  }
+}
+
+.modal-dialog {
+  display: inline-block;
+  text-align: left;
+  vertical-align: middle;
+}
 
 .modal-title {
     color: #ffffff;
-    text-align: center;
+    /*text-align: center;*/
 }
 
 .modal-header {
