edit edit ticket layout

--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/CreateNewTicket.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/CreateNewTicket.cshtml
@@ -233,7 +233,7 @@
                     if (data.success) {
                         noty({
                             text: "Ticket was created successfully!",
-                            layout: "top",
+                            layout: "topCenter",
                             type: "success",
                             timeout: 1000
                         });
