--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -306,7 +306,8 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn bg-olive btn-flat" data-role="modal">Reopen</button>
+                    <a class="btn btn-primary btn-flat" data-role="modal-btn-solve">Solve</a>
+                    <a class="btn bg-olive btn-flat" data-role="modal-btn-reopen">Reopen</a>
                     <button type="button" class="btn btn-default btn-flat" data-dismiss="modal">Close</button>
                 </div>
             </div>
