--- a/TMS/TMS/Areas/Admin/Views/ManageUser/CreateRequester.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageUser/CreateRequester.cshtml
@@ -11,24 +11,31 @@
                 <div class="box-body large-text-container">
                     @Html.AntiForgeryToken()
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">Email</label>
+                        <label class="col-sm-3 control-label">Email&nbsp;<span style="color: red">*</span></label>
                         <div class="col-sm-9">
                             @Html.TextBoxFor(m => m.Email, new { @class = "form-control", id = "email-txt" })
                             @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">Username</label>
+                        <label class="col-sm-3 control-label">Username&nbsp;<span style="color: red">*</span></label>
                         <div class="col-sm-9">
                             @Html.TextBoxFor(m => m.Username, new { @class = "form-control", id = "username-txt" })
                             @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">Fullname</label>
+                        <label class="col-sm-3 control-label">Fullname&nbsp;<span style="color: red">*</span></label>
                         <div class="col-sm-9">
                             @Html.TextBoxFor(m => m.Fullname, new { @class = "form-control" })
                             @Html.ValidationMessageFor(m => m.Fullname, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-3 control-label">Phone Number</label>
+                        <div class="col-sm-9">
+                            @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(m => m.PhoneNumber, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group">
