--- a/TMS/TMS/Areas/Admin/Views/ManageUser/EditTechnician.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageUser/EditTechnician.cshtml
@@ -17,17 +17,24 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">Email</label>
+                        <label class="col-sm-3 control-label">Email&nbsp;<span style="color: red">*</span></label>
                         <div class="col-sm-9">
                             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                             @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">Fullname</label>
+                        <label class="col-sm-3 control-label">Fullname&nbsp;<span style="color: red">*</span></label>
                         <div class="col-sm-9">
                             @Html.TextBoxFor(m => m.Fullname, new { @class = "form-control" })
                             @Html.ValidationMessageFor(m => m.Fullname, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-3 control-label">Phone Number</label>
+                        <div class="col-sm-9">
+                            @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(m => m.PhoneNumber, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group">
@@ -54,7 +61,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">Department</label>
+                        <label class="col-sm-3 control-label">Department&nbsp;<span style="color: red">*</span></label>
                         <div class="col-sm-9">
                             @Html.DropDownListFor(m => m.DepartmentID, (SelectList)ViewBag.departmentList, "--Choose department--", new { @class = "form-control" })
                             @Html.ValidationMessageFor(m => m.DepartmentID, "", new { @class = "text-danger" })
