--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -84,20 +84,17 @@
 
 @section InitModal {
     <div id="modal-cancel-ticket" class="modal fade" aria-hidden="true" tabindex="-1" role="dialog">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
-                    <h4 class="modal-title">Cancel ticket</h4>
-                </div>
-                <div class="modal-body">
-                    <p>Do you really want to cancel this ticket?</p>
+                    <h4 class="modal-title">Do you want to cancel this ticket?</h4>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" data-role="btn-confirm-cancel">Confirm</button>
+                    <button type="button" class="btn btn-primary" data-role="btn-confirm-cancel">Yes</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
                 </div>
             </div>
             <!-- /.modal-content -->
@@ -106,20 +103,17 @@
     </div>
 
     <div id="modal-merge-ticket" class="modal fade" aria-hidden="true" tabindex="-1" role="dialog">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
-                    <h4 class="modal-title">Merge ticket</h4>
-                </div>
-                <div class="modal-body">
-                    <p>Do you really want to merge these tickets?</p>
+                    <h4 class="modal-title">Do you want to merge these tickets?</h4>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" data-role="btn-confirm-merge">Confirm</button>
+                    <button type="button" class="btn btn-primary" data-role="btn-confirm-merge">Yes</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
                 </div>
             </div>
             <!-- /.modal-content -->
@@ -300,7 +294,7 @@
                 <a class="btn bg-olive btn-flat" style="width: 135px;" href='@Url.Action("CreateNewTicket", "ManageTicket")'>
                     Create New Ticket
                 </a>
-                <a class="btn bg-olive btn-flat margin-left10" style="width: 100px;" data-role="btn-merge-ticket">
+                <a class="btn bg-olive btn-flat margin-left10 disabled" style="width: 100px;" data-role="btn-merge-ticket">
                     Merge
                 </a>
                 <br />
@@ -335,7 +329,6 @@
                     </thead>
                     <tbody></tbody>
                 </table>
-
             </div>
             <!-- /.box-body -->
         </div>
