--- a/TMS/TMS/Views/Ticket/Solve.cshtml
+++ b/TMS/TMS/Views/Ticket/Solve.cshtml
@@ -284,21 +284,31 @@
                             solution: $("#new-solution").val(),
                             command: $(this)[0].id
                         },
-                        "success": function (data) {
-                            noty({
-                                text: data.msg,
-                                layout: "topCenter",
-                                type: "success",
-                                timeout: 2000
-                            });
-                            if (data.userRole == "Helpdesk") {
-                                setTimeout(function () {
-                                    window.location.href = "/HelpDesk/ManageTicket/";
-                                }, 1000);
-                            } else if (data.userRole == "Technician") {
-                                setTimeout(function () {
-                                    window.location.href = "/Technician/ManageTicket/";
-                                }, 1000);
+                        success: function (data) {
+                            if (!data.success) {
+                                noty({
+                                    text: data.msg,
+                                    layout: "topCenter",
+                                    type: "error",
+                                    timeout: 2000
+                                });
+                            }
+                            else {
+                                noty({
+                                    text: data.msg,
+                                    layout: "topCenter",
+                                    type: "success",
+                                    timeout: 2000
+                                });
+                                if (data.userRole == "Helpdesk") {
+                                    setTimeout(function () {
+                                        window.location.href = "/HelpDesk/ManageTicket/";
+                                    }, 1000);
+                                } else if (data.userRole == "Technician") {
+                                    setTimeout(function () {
+                                        window.location.href = "/Technician/ManageTicket/";
+                                    }, 1000);
+                                }
                             }
                         }
                     });
