fix ticket detail view

--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -219,6 +219,7 @@
                                         <div class="col-sm-7"><span id="ticket-schedule-end"></span></div>
                                     </div>
                                 </div>
+                                
                                 <div class="col-sm-12 row-content">
                                     <div class="col-sm-6 ">
                                         <div class="col-sm-5 labels">
@@ -231,6 +232,14 @@
                                             <b>Actual end time: </b>
                                         </div>
                                         <div class="col-sm-7"><span id="ticket-actual-end"></span></div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-12 row-content">
+                                    <div class="col-sm-6">
+                                        <div class="col-sm-5 labels">
+                                            <b>Solved date: </b>
+                                        </div>
+                                        <div class="col-sm-7"><span id="ticket-solved-date"></span></div>
                                     </div>
                                 </div>
                             </div>
