--- a/TMS/TMS/Areas/Admin/Views/ManageSC/Urgency.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageSC/Urgency.cshtml
@@ -50,7 +50,7 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Name&nbsp;<span style="color: red">*</span></label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" placeholder="Impact" id="name-txt">
+                            <input type="text" class="form-control" placeholder="Name" id="name-txt">
                             <p id="name-validation-message" class="text-danger" style="display: none"></p>
                         </div>
                     </div>
