--- a/TMS/TMS/Areas/Admin/Views/Profile/Index.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/Profile/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model TMS.ViewModels.ProfileAdminViewModel
+﻿@using System.Web.UI.WebControls
+@using Microsoft.Ajax.Utilities
+@model TMS.ViewModels.ProfileAdminViewModel
 @{
     ViewBag.Title = "View Profile";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
@@ -15,30 +17,68 @@
             <div class="box box-primary">
                 <div class="box-body large-text-container profileInfo">
                     <br />
+                    <!--Username-->
                     <div class="form-group">
                         <label class="col-sm-offset-2 col-sm-3">Username</label>
                         <div class="col-sm-7">
                             @ViewBag.Username
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label class="col-sm-offset-2 col-sm-3">Fullname</label>
-                        <div class="col-sm-7">
-                            @Model.FullName
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-offset-2 col-sm-3">Address</label>
-                        <div class="col-sm-7">
-                            @Model.Address
-                        </div>
-                    </div>
+                    <!--Email-->
                     <div class="form-group">
                         <label class="col-sm-offset-2 col-sm-3 ">Email</label>
                         <div class="col-sm-7">
                             @Model.Email
                         </div>
                     </div>
+                    <!--Fullname-->
+                    <div class="form-group">
+                        <label class="col-sm-offset-2 col-sm-3">Fullname</label>
+                        <div class="col-sm-7">
+                            @Model.FullName
+                        </div>
+                    </div>
+                    <!--Birthday-->
+                    <div class="form-group">
+                        <label class="col-sm-offset-2 col-sm-3 ">Birthday</label>
+                        <div class="col-sm-7">
+                            @if (Model.DayOfBirth.HasValue)
+                            {
+                                @Model.DayOfBirth.Value.ToString("dd/MM/yyyy")
+                            }
+                            else
+                            {
+                                <span>-</span>
+                            }
+                        </div>
+                    </div>
+                    <!--Adrress-->
+                    <div class="form-group">
+                        <label class="col-sm-offset-2 col-sm-3">Address</label>
+                        <div class="col-sm-7">
+                            @if (!Model.Address.IsNullOrWhiteSpace())
+                            {
+                                @Model.Address
+                            }
+                            else
+                            { <span>-</span>}
+                        </div>
+                    </div>
+                    <!--Phone-->
+                    <div class="form-group">
+                        <label class="col-sm-offset-2 col-sm-3">Phone</label>
+                        <div class="col-sm-7">
+                            @if (!Model.Phone.IsNullOrWhiteSpace())
+                            {
+                                <span>@Model.Phone</span>
+                            }
+                            else
+                            {
+                                <span>-</span>
+                            }
+                        </div>
+                    </div>
+                    <!--Gender-->
                     <div class="form-group">
                         <label class="col-sm-offset-2 col-sm-3 ">Gender</label>
                         <div class="col-sm-7">
@@ -53,20 +93,16 @@
                                     <p>Female</p>
                                 }
                             }
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-offset-2 col-sm-3 ">Birthday</label>
-                        <div class="col-sm-7">
-                            @if (Model.DayOfBirth.HasValue)
+                            else
                             {
-                                @Model.DayOfBirth.Value.ToString("dd/MM/yyyy")
+                                <span>-</span>
                             }
                         </div>
                     </div>
+                    <!--Btn Update profile-->
                     <div class="form-group">
                         <div class="col-xs-offset-4 col-xs-8">
-                            @Html.ActionLink("Update Profile", "UpdateProfile", null, new { @class = "btn btn-success"})
+                            @Html.ActionLink("Update Profile", "UpdateProfile", null, new { @class = "btn btn-success" })
                         </div>
                     </div>
                 </div>
