--- a/TMS/TMS/Areas/Admin/Views/Profile/UpdateProfile.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/Profile/UpdateProfile.cshtml
@@ -11,26 +11,30 @@
             <div class="box box-primary">
                 <div class="box-body large-text-container">
                     @Html.AntiForgeryToken()
+                    <!--Username-->
                     <div class="form-group">
                         <label class="col-sm-3 control-label">Username</label>
                         <div class="col-sm-9">
                             <input type="text" class="form-control" disabled="disabled" value="@ViewBag.Username" />
                         </div>
                     </div>
+                    <!--Email-->
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">Email</label>
+                        <label class="col-sm-3 control-label">Email&nbsp;<span style="color: red">*</span></label>
                         <div class="col-sm-9">
                             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                             @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                         </div>
                     </div>
+                    <!--Fullname-->
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">Fullname</label>
+                        <label class="col-sm-3 control-label">Fullname&nbsp;<span style="color: red">*</span></label>
                         <div class="col-sm-9">
                             @Html.TextBoxFor(m => m.FullName, new { @class = "form-control" })
                             @Html.ValidationMessageFor(m => m.FullName, "", new { @class = "text-danger" })
                         </div>
                     </div>
+                    <!--Birthday-->
                     <div class="form-group">
                         <label class="col-sm-3 control-label">Birthday</label>
                         <div class="col-sm-9">
@@ -38,6 +42,7 @@
                             @Html.ValidationMessageFor(m => m.DayOfBirth, "", new { @class = "text-danger" })
                         </div>
                     </div>
+                    <!--Address-->
                     <div class="form-group">
                         <label class="col-sm-3 control-label">Address</label>
                         <div class="col-sm-9">
@@ -45,6 +50,15 @@
                             @Html.ValidationMessageFor(m => m.Address, "", new { @class = "text-danger" })
                         </div>
                     </div>
+                    <!--Phone-->
+                    <div class="form-group">
+                        <label class="col-sm-3 control-label">Phone</label>
+                        <div class="col-sm-9">
+                            @Html.TextBoxFor(m => m.Phone, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(m => m.Phone, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <!--gender-->
                     <div class="form-group">
                         <label class="col-sm-3 control-label">Gender</label>
                         <div class="col-sm-9">
@@ -54,6 +68,7 @@
                             }, "--Choose gender--", new { @class = "form-control" })
                         </div>
                     </div>
+                    <!--btnSave , btnCancel-->
                     <div class="form-group">
                         <div class="col-xs-offset-3 col-xs-9">
                             <input type="submit" class="btn btn-success" value="Save" />
