--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -273,7 +273,7 @@
                                         <div class="col-sm-2 labels">
                                             <b>Attachment: </b>
                                         </div>
-                                        <div class="col-sm-10"><span id="ticket-attachment">-</span></div>
+                                        <div class="col-sm-10"><span id="ticket-attachment"></span></div>
                                     </div>
                                 </div>
                                 <div class="col-sm-12 row-content">
